--- a/Index.html
+++ b/Index.html
@@ -80,7 +80,7 @@
             </a>
 
             <a href="配合変化ツール.html" class="menu-item color-2">
-                <span class="icon">⚗️</span>
+                <span class="icon">💉</span>
                 配合変化<br>データベース
             </a>
 
