--- a/休薬確認ツール.html
+++ b/休薬確認ツール.html
@@ -1178,8 +1178,7 @@ function printFromPreview() {
 window.onload = init;
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-<div id="common-nav-bar" style="background:#333; padding:10px; text-align:center; margin-bottom:15px;">
+</body>　<div id="common-nav-bar" style="background:#333; padding:10px; text-align:center; margin-bottom:15px;">
     <style>
         .nav-link-btn {
             color: white;
@@ -1200,3 +1199,4 @@ window.onload = init;
     <a href="小児投与量確認ツール.html" class="nav-link-btn">小児用量</a>
 </div>
 </html>
+
