--- a/配合変化ツール.html
+++ b/配合変化ツール.html
@@ -333,6 +333,26 @@
     </style>
 </head>
 <body>
+    　<div id="common-nav-bar" style="background:#333; padding:10px; text-align:center; margin-bottom:15px;">
+        <style>
+            .nav-link-btn {
+                color: white;
+                text-decoration: none;
+                margin: 0 10px;
+                padding: 5px 10px;
+                border: 1px solid #555;
+                border-radius: 4px;
+                background: #444;
+                font-size: 14px;
+                display: inline-block;
+            }
+            .nav-link-btn:hover { background: #666; }
+        </style>
+        <a href="index.html" class="nav-link-btn">🏠 メニューへ</a>
+        <a href="休薬確認ツール.html" class="nav-link-btn">休薬確認</a>
+        <a href="配合変化ツール.html" class="nav-link-btn">配合変化</a>
+        <a href="小児投与量確認ツール.html" class="nav-link-btn">小児用量</a>
+    </div>
     <div class="container">
         <h1>💊 配合変化データベース</h1>
         <div class="subtitle">医療従事者向け包括的配合変化情報システム</div>
@@ -961,3 +981,4 @@
     <a href="小児投与量確認ツール.html" class="nav-link-btn">小児用量</a>
 </div>
 </html>
+
